--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,13 @@
 {
-    "name": "tcg/voyager",
-    "description": "A Laravel Admin Package for The Control Group to make your life easier and steer your project in the right direction",
+    "name": "cDonut/voyager",
+    "description": "fork tcg/voyager.",
     "keywords": ["laravel", "admin", "panel"],
     "license": "MIT",
     "homepage": "https://the-control-group.github.io/voyager/",
-    "support": {
-        "issues": "https://github.com/the-control-group/voyager/issues",
-        "source": "https://github.com/the-control-group/voyager"
-    },
     "authors": [
         {
-            "name": "Tony Lea",
-            "email": "tony.lea@thecontrolgroup.com"
+            "name": "cDonut",
+            "email": "dolgvadim@gmail.com"
         }
     ],
     "require": {
