--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cDonut/voyager",
+    "name": "cdonut/voyager",
     "description": "fork tcg/voyager.",
     "keywords": ["laravel", "admin", "panel"],
     "license": "MIT",
